No longer depend on prekubelet, just collector
The while loop doing a health check should be enough to determine
when it is safe to run `kubectl apply`.

--- a/fpm/usr/lib/systemd/system/keights-kubectl-create.service
+++ b/fpm/usr/lib/systemd/system/keights-kubectl-create.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=keights-kubectl-create service
-Requires=keights-prekubelet.service
-After=keights-prekubelet.service
+Requires=keights-collector.service
+After=keights-collector.service
 
 [Service]
 Type=oneshot
