--- a/fpm/usr/lib/systemd/system/keights-whisper-controller.service
+++ b/fpm/usr/lib/systemd/system/keights-whisper-controller.service
@@ -1,22 +1,15 @@
 [Unit]
 Description=keights-whisper-controller service
+Before=keights-kubeadm-init.service
 
 [Service]
 Type=oneshot
 # Environment=AWS_REGION=
 # Environment=KEIGHTS_CLUSTER_NAME=
 ExecStart=/usr/bin/keights whisper \
-            -p /${KEIGHTS_CLUSTER_NAME}/cluster/ca.crt:/run/kubernetes/pki/ca.crt \
-            -p /${KEIGHTS_CLUSTER_NAME}/cluster/kube-router.crt:/run/kubernetes/pki/kube-router.crt \
-            -p /${KEIGHTS_CLUSTER_NAME}/cluster/kube-router.key:/run/kubernetes/pki/kube-router.key \
             -p /${KEIGHTS_CLUSTER_NAME}/cluster/bootstrap-token:/run/kubernetes/bootstrap-token \
-            -p /${KEIGHTS_CLUSTER_NAME}/controller/ca.key:/run/kubernetes/pki/ca.key \
-            -p /${KEIGHTS_CLUSTER_NAME}/controller/apiserver.crt:/run/kubernetes/pki/apiserver.crt \
-            -p /${KEIGHTS_CLUSTER_NAME}/controller/apiserver.key:/run/kubernetes/pki/apiserver.key \
-            -p /${KEIGHTS_CLUSTER_NAME}/controller/apiserver-kubelet-client.crt:/run/kubernetes/pki/apiserver-kubelet-client.crt \
-            -p /${KEIGHTS_CLUSTER_NAME}/controller/apiserver-kubelet-client.key:/run/kubernetes/pki/apiserver-kubelet-client.key \
-            -p /${KEIGHTS_CLUSTER_NAME}/controller/sa.pub:/run/kubernetes/pki/sa.pub \
-            -p /${KEIGHTS_CLUSTER_NAME}/controller/sa.key:/run/kubernetes/pki/sa.key
+            -p /${KEIGHTS_CLUSTER_NAME}/cluster/ca.crt:/etc/kubernetes/pki/ca.crt \
+            -p /${KEIGHTS_CLUSTER_NAME}/controller/ca.key:/etc/kubernetes/pki/ca.key \
             -p /${KEIGHTS_CLUSTER_NAME}/controller/etcd-ca.crt:/etc/kubernetes/pki/etcd-ca.crt \
             -p /${KEIGHTS_CLUSTER_NAME}/controller/etcd-ca.key:/etc/kubernetes/pki/etcd-ca.key \
             -p /${KEIGHTS_CLUSTER_NAME}/controller/etcd.crt:/etc/kubernetes/pki/etcd.crt \
