--- a/fpm/usr/lib/tmpfiles.d/keights.conf
+++ b/fpm/usr/lib/tmpfiles.d/keights.conf
@@ -1,4 +1,5 @@
 d /etc/kubernetes 0755 root root - -
+d /etc/kubernetes/pki 0700 root root - -
 d /etc/kubernetes/manifests 0755 root root - -
 D /run/keights-collector 0755 root root - -
 D /run/kubernetes/pki 0700 root root - -
