Update systemd dependencies

--- a/fpm/usr/lib/systemd/system/keights-collector.service
+++ b/fpm/usr/lib/systemd/system/keights-collector.service
@@ -11,4 +11,4 @@ ExecStart=/usr/bin/keights collect \
             -o /run/keights-collector/asg
 
 [Install]
-WantedBy=keights-configure.target
+WantedBy=multi-user.target
