Use Hyperkube image for all kubernetes components

--- a/fpm/usr/share/keights/kubeadm-config.yml.template
+++ b/fpm/usr/share/keights/kubeadm-config.yml.template
@@ -31,3 +31,4 @@ apiServerExtraArgs:
   external-hostname: {{ .APIServer }}
 controllerManagerExtraArgs:
   configure-cloud-routes: 'false'
+unifiedControlPlaneImage: {{ .HyperkubeImage }}
