--- a/fpm/usr/lib/systemd/system/keights-templatize-kubeadm-config.service
+++ b/fpm/usr/lib/systemd/system/keights-templatize-kubeadm-config.service
@@ -11,6 +11,7 @@ Type=simple
 # Environment=KEIGHTS_APISERVER=
 # Environment=KEIGHTS_POD_SUBNET=
 # Environment=KEIGHTS_SERVICE_SUBNET=
+# Environment=KEIGHTS_HYPERKUBE_IMAGE=
 ExecStartPre=/usr/bin/systemd-tmpfiles --create --prefix /var/lib/kubeadm
 ExecStart=/bin/sh -c ' \
     while true; do \
@@ -30,6 +31,7 @@ ExecStart=/bin/sh -c ' \
       -v ServiceSubnet=${KEIGHTS_SERVICE_SUBNET} \
       -v NodeName=$${node_name} \
       -v Token=$${token} \
+      -v HyperkubeImage=${KEIGHTS_HYPERKUBE_IMAGE} \
 '
 
 [Install]
