Continue using TCP health check for etcd for now
Until certificates are generated on the masters themselves with
the local IP as a SAN, HTTPS health check will fail because
kubelet connects over the IP. For now, use TCP health check as a
workaround.

--- a/fpm/usr/share/keights/etcd.yml.template
+++ b/fpm/usr/share/keights/etcd.yml.template
@@ -51,11 +51,9 @@ spec:
     image: {{ .EtcdImage }}
     livenessProbe:
       failureThreshold: 8
-      httpGet:
+      tcpSocket:
         host: {{ .Prefix }}-{{ .MyIndex }}.{{ .Domain }}
-        path: /health
         port: 2379
-        scheme: HTTP
       initialDelaySeconds: 15
       timeoutSeconds: 15
     name: etcd-container
