Change `.yml` to `yaml` to be consistent with kubeadm

--- a/fpm/usr/lib/systemd/system/keights-kubeadm-init.service
+++ b/fpm/usr/lib/systemd/system/keights-kubeadm-init.service
@@ -8,11 +8,11 @@ ConditionPathExists=!/var/lib/kubeadm/initialized
 Type=oneshot
 ExecStart=/bin/sh -c ' \
     /usr/bin/kubeadm init \
-      --config=/var/lib/kubeadm/config.yml \
+      --config=/var/lib/kubeadm/config.yaml \
       --ignore-preflight-errors=all && \
     touch /var/lib/kubeadm/initialized \
 '
-ExecStartPost=/bin/rm /var/lib/kubeadm/config.yml
+ExecStartPost=/bin/rm /var/lib/kubeadm/config.yaml
 
 [Install]
 WantedBy=multi-user.target
