--- a/fpm/usr/lib/systemd/system/keights-templatize-etcd.service
+++ b/fpm/usr/lib/systemd/system/keights-templatize-etcd.service
@@ -13,8 +13,8 @@ Type=simple
 ExecStartPre=/usr/bin/systemd-tmpfiles --create --prefix /etc/kubernetes
 ExecStart=/usr/bin/keights template \
             -i /run/keights-collector/asg \
-            -t /usr/share/keights/etcd.yml.template \
-            -D /etc/kubernetes/manifests/etcd.yml \
+            -t /usr/share/keights/etcd.yaml.template \
+            -D /etc/kubernetes/manifests/etcd.yaml \
             -v EtcdImage=${KEIGHTS_ETCD_IMAGE} \
             -v Prefix=${KEIGHTS_PREFIX} \
             -v Domain=${KEIGHTS_DOMAIN} \
