--- a/fpm/etc/kubernetes/addons/kube-router.yaml
+++ b/fpm/etc/kubernetes/addons/kube-router.yaml
@@ -41,8 +41,7 @@ spec:
       serviceAccountName: kube-router
       containers:
       - name: kube-router
-        image: cloudnativelabs/kube-router
-        imagePullPolicy: Always
+        image: cloudnativelabs/kube-router:v0.0.20
         args:
         - "--run-router=true"
         - "--run-firewall=true"
@@ -72,8 +71,7 @@ spec:
           mountPath: /etc/cni/net.d
       initContainers:
       - name: install-cni
-        image: busybox
-        imagePullPolicy: Always
+        image: busybox:1.28.1
         command:
         - /bin/sh
         - -c
