--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,6 +18,8 @@ fpm:
       /etc/kubernetes/manifests/kube-addon-manager.yaml
     fpm/etc/kubernetes/addons/kubernetes-dashboard.yaml:
       /etc/kubernetes/addons/kubernetes-dashboard.yaml
+    fpm/etc/kubernetes/addons/kube-router.yaml:
+      /etc/kubernetes/addons/kube-router.yaml
     fpm/usr/lib/tmpfiles.d/keights.conf:
       /usr/lib/tmpfiles.d/keights.conf
     fpm/usr/lib/systemd/system/keights-collector.service:
