--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -48,7 +48,7 @@ fpm:
       /usr/lib/systemd/system/keights-whisper-node.service
     fpm/usr/lib/systemd/system/var-lib-etcd.mount:
       /usr/lib/systemd/system/var-lib-etcd.mount
-    fpm/usr/share/keights/etcd.yml.template:
-      /usr/share/keights/etcd.yml.template
-    fpm/usr/share/keights/kubeadm-config.yml.template:
-      /usr/share/keights/kubeadm-config.yml.template
+    fpm/usr/share/keights/etcd.yaml.template:
+      /usr/share/keights/etcd.yaml.template
+    fpm/usr/share/keights/kubeadm-config.yaml.template:
+      /usr/share/keights/kubeadm-config.yaml.template
