Remove HTTP health check for kube-router
This should be supported in the upcoming release, but for now a
TCP health check will be used.

--- a/fpm/etc/kubernetes/addons/kube-router.yaml
+++ b/fpm/etc/kubernetes/addons/kube-router.yaml
@@ -52,8 +52,7 @@ spec:
             fieldRef:
               fieldPath: spec.nodeName
         livenessProbe:
-          httpGet:
-            path: /healthz
+          tcpSocket:
             port: 20244
           initialDelaySeconds: 10
           periodSeconds: 3
