Re-add `sa.key` and `sa.pub` back to keights-whisper-controller
The service account signing key must be the same for all masters,
so it will be retrieved from parameter store like the other
shared secrets.

--- a/fpm/usr/lib/systemd/system/keights-whisper-controller.service
+++ b/fpm/usr/lib/systemd/system/keights-whisper-controller.service
@@ -18,4 +18,6 @@ ExecStart=/usr/bin/keights whisper \
             -p /${KEIGHTS_CLUSTER_NAME}/controller/etcd-peer.crt:/etc/kubernetes/pki/etcd-peer.crt \
             -p /${KEIGHTS_CLUSTER_NAME}/controller/etcd-peer.key:/etc/kubernetes/pki/etcd-peer.key \
             -p /${KEIGHTS_CLUSTER_NAME}/controller/etcd-client.crt:/etc/kubernetes/pki/etcd-client.crt \
-            -p /${KEIGHTS_CLUSTER_NAME}/controller/etcd-client.key:/etc/kubernetes/pki/etcd-client.key
+            -p /${KEIGHTS_CLUSTER_NAME}/controller/etcd-client.key:/etc/kubernetes/pki/etcd-client.key \
+            -p /${KEIGHTS_CLUSTER_NAME}/controller/sa.key:/etc/kubernetes/pki/sa.key \
+            -p /${KEIGHTS_CLUSTER_NAME}/controller/sa.pub:/etc/kubernetes/pki/sa.pub
