Change templates to support new kubeadm-ified AMI

--- a/common.yml
+++ b/common.yml
@@ -80,30 +80,6 @@ Resources:
       ToPort: 10250
       IpProtocol: tcp
 
-  KubeRouterSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security group for kube-router
-      VpcId: !Ref VpcId
-
-  KubeRouterSecurityGroupBgpIngress:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      GroupId: !Ref KubeRouterSecurityGroup
-      SourceSecurityGroupId: !Ref KubeRouterSecurityGroup
-      FromPort: 179
-      ToPort: 179
-      IpProtocol: tcp
-
-  KubeRouterSecurityGroupBgpEgress:
-    Type: AWS::EC2::SecurityGroupEgress
-    Properties:
-      GroupId: !Ref KubeRouterSecurityGroup
-      DestinationSecurityGroupId: !Ref KubeRouterSecurityGroup
-      FromPort: 179
-      ToPort: 179
-      IpProtocol: tcp
-
   K8sMasterAccess:
     Type: AWS::IAM::ManagedPolicy
     Properties:
@@ -191,6 +167,7 @@ Resources:
               - autoscaling:DescribeAutoScalingInstances
               - ec2:DescribeInstances
               - ec2:DescribeVolumes
+              - ec2:ModifyInstanceAttribute
             Resource:
               - '*'
           - Effect: Allow
@@ -290,9 +267,6 @@ Outputs:
   KubeletSecurityGroup:
     Description: Security group of kube-router
     Value: !Ref KubeletSecurityGroup
-  KubeRouterSecurityGroup:
-    Description: Security group of kube-router
-    Value: !Ref KubeRouterSecurityGroup
   MasterInstanceProfile:
     Description: Instance profile for master nodes
     Value: !Ref MasterInstanceProfile
