--- a/master.yml
+++ b/master.yml
@@ -51,10 +51,7 @@ Parameters:
   KubeletSecurityGroup:
     Description: Security group for kubelet
     Type: String
-  KubeRouterSecurityGroup:
-    Description: Security group for kube-router
-    Type: String
-  LambdaExecutionRoleArn:
+  LambdaRoleArn:
     Description: Role ARN to assign to helper Lamba functions
     Type: String
   KmsKeyId:
@@ -77,35 +74,29 @@ Parameters:
     Description: CIDR block given API access to cluster
     Default: 0.0.0.0/0
     Type: String
+  ClusterDns:
+    Description: >-
+      IP addres of cluster DNS server; should be
+      the value of ServiceCidr + 10
+    Default: 10.1.0.10
+    Type: String
   EtcdVolumeSize:
     Description: Size of etcd volume in GB
     Default: 10
     Type: Number
-  KubeApiServerImage:
+  HyperkubeImage:
     Description: Docker image containing kube-apiserver
     Type: String
-    Default: gcr.io/google_containers/kube-apiserver:v1.8.7
-  KubeControllerManagerImage:
-    Description: Docker image containing kube-controller-manager
-    Type: String
-    Default: gcr.io/google_containers/kube-controller-manager:v1.8.7
-  KubeSchedulerImage:
-    Description: Docker image containing kube-scheduler
-    Type: String
-    Default: gcr.io/google_containers/kube-scheduler:v1.8.7
+    Default: k8s.gcr.io/hyperkube-amd64:v1.9.4
   EtcdImage:
     Description: Docker image containing etcd
     Type: String
-    Default: gcr.io/google_containers/etcd:3.0.17
-  KubeRouterImage:
-    Description: Docker image containing kube-router
-    Type: String
-    Default: cloudnativelabs/kube-router:v0.0.20
+    Default: k8s.gcr.io/etcd-amd64:3.0.17
 
 Mappings:
   LambdaUrls:
     AllFunctions:
-      Bucket: pi-lambda-us-west-2
+      Bucket: cloudboss-public
     SubnetToAzFunction:
       Key: lambda/co/cloudboss/stackhand/subnet_to_az/0.1.0/go1.x/subnet_to_az-0.1.0.zip
     KubeCaFunction:
@@ -124,7 +115,7 @@ Resources:
       Handler: subnet_to_az
       Runtime: go1.x
       Timeout: 30
-      Role: !Ref LambdaExecutionRoleArn
+      Role: !Ref LambdaRoleArn
 
   KubeCaFunction:
     Type: AWS::Lambda::Function
@@ -136,7 +127,7 @@ Resources:
       Runtime: go1.x
       MemorySize: 512
       Timeout: 30
-      Role: !Ref LambdaExecutionRoleArn
+      Role: !Ref LambdaRoleArn
 
   SubnetToAz1:
     Type: Custom::SubnetToAz
@@ -343,7 +334,6 @@ Resources:
       SecurityGroups:
         - !Ref ApiServerSecurityGroup
         - !Ref KubeletSecurityGroup
-        - !Ref KubeRouterSecurityGroup
         - !Ref AutoscalingGroupSecurityGroup
         - !Ref EtcdSecurityGroup
       UserData:
@@ -351,14 +341,6 @@ Resources:
           !Sub |
             #cloud-config
             write_files:
-              - path: /etc/systemd/system/keights-bootstrap-kubeconfig.service.d/environment.conf
-                owner: root:root
-                permissions: '0644'
-                content: |
-                  [Service]
-                  Environment=KEIGHTS_CLUSTER_NAME=${ClusterName}
-                  Environment=KEIGHTS_K8S_SERVER=${LoadBalancer.DNSName}
-
               - path: /etc/systemd/system/keights-collector.service.d/environment.conf
                 owner: root:root
                 permissions: '0644'
@@ -386,37 +368,6 @@ Resources:
                   Environment=KEIGHTS_ETCD_IMAGE=${EtcdImage}
                   Environment=KEIGHTS_PREFIX=${ClusterName}
 
-              - path: /etc/systemd/system/keights-templatize-kube-apiserver.service.d/environment.conf
-                owner: root:root
-                permissions: '0644'
-                content: |
-                  [Service]
-                  Environment=AWS_REGION=${AWS::Region}
-                  Environment=KEIGHTS_DOMAIN=k8s.local
-                  Environment=KEIGHTS_KUBE_APISERVER_IMAGE=${KubeApiServerImage}
-                  Environment=KEIGHTS_SERVICE_CIDR=${ServiceCidr}
-                  Environment=KEIGHTS_PREFIX=${ClusterName}
-
-              - path: /etc/systemd/system/keights-templatize-kube-controller-manager.service.d/environment.conf
-                owner: root:root
-                permissions: '0644'
-                content: |
-                  [Service]
-                  Environment=AWS_REGION=${AWS::Region}
-                  Environment=KEIGHTS_CLUSTER_NAME=${ClusterName}
-                  Environment=KEIGHTS_POD_CIDR=${PodCidr}
-                  Environment=KEIGHTS_SERVICE_CIDR=${ServiceCidr}
-                  Environment=KEIGHTS_KUBE_CONTROLLER_MANAGER_IMAGE=${KubeControllerManagerImage}
-
-              - path: /etc/systemd/system/keights-templatize-kube-scheduler.service.d/environment.conf
-                owner: root:root
-                permissions: '0644'
-                content: |
-                  [Service]
-                  Environment=AWS_REGION=${AWS::Region}
-                  Environment=KEIGHTS_KUBE_SCHEDULER_IMAGE=${KubeSchedulerImage}
-                  Environment=KEIGHTS_POD_CIDR=${PodCidr}
-
               - path: /etc/systemd/system/keights-volumize.service.d/environment.conf
                 owner: root:root
                 permissions: '0644'
@@ -433,58 +384,56 @@ Resources:
                   Environment=AWS_REGION=${AWS::Region}
                   Environment=KEIGHTS_CLUSTER_NAME=${ClusterName}
 
-              - path: /etc/systemd/system/kubelet.service.d/environment.conf
+              - path: /etc/systemd/system/keights-templatize-kubeadm-config.service.d/environment.conf
                 owner: root:root
                 permissions: '0644'
                 content: |
                   [Service]
+                  Environment=AWS_REGION=${AWS::Region}
                   Environment=KEIGHTS_DOMAIN=k8s.local
-                  Environment=KEIGHTS_POD_CIDR=${PodCidr}
-                  Environment=KEIGHTS_NODE_LABELS=kubernetes.io/role=master,node-role.kubernetes.io/master=
-                  Environment=KEIGHTS_NODE_REGISTER=--register-with-taints=kubernetes.io/role=master:NoSchedule
+                  Environment=KEIGHTS_PREFIX=${ClusterName}
+                  Environment=KEIGHTS_APISERVER=${LoadBalancer.DNSName}
+                  Environment=KEIGHTS_POD_SUBNET=${PodCidr}
+                  Environment=KEIGHTS_SERVICE_SUBNET=${ServiceCidr}
+                  Environment=KEIGHTS_HYPERKUBE_IMAGE=${HyperkubeImage}
 
-              - path: /etc/systemd/system/kube-router.service.d/environment.conf
+              - path: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
                 owner: root:root
                 permissions: '0644'
                 content: |
                   [Service]
-                  Environment=KEIGHTS_KUBE_ROUTER_IMAGE=${KubeRouterImage}
-
-              - path: /etc/systemd/system/kube-router-kubeconfig.service.d/environment.conf
-                owner: root:root
-                permissions: '0644'
-                content: |
-                  [Service]
-                  Environment=KEIGHTS_CLUSTER_NAME=${ClusterName}
-                  Environment=KEIGHTS_K8S_SERVER=${LoadBalancer.DNSName}
+                  Environment=KEIGHTS_CLUSTER_DOMAIN=k8s.local
+                  ExecStart=
+                  ExecStart=/usr/bin/kubelet \
+                              --bootstrap-kubeconfig=/etc/kubernetes/bootstrap-kubelet.conf \
+                              --kubeconfig=/etc/kubernetes/kubelet.conf \
+                              --pod-manifest-path=/etc/kubernetes/manifests \
+                              --allow-privileged=true \
+                              --network-plugin=cni \
+                              --cni-conf-dir=/etc/cni/net.d \
+                              --cni-bin-dir=/opt/cni/bin \
+                              --cluster-dns=${ClusterDns} \
+                              --cluster-domain=${!KEIGHTS_CLUSTER_DOMAIN} \
+                              --authorization-mode=Webhook \
+                              --client-ca-file=/etc/kubernetes/pki/ca.crt \
+                              --cadvisor-port=0 \
+                              --rotate-certificates=true \
+                              --cert-dir=/var/lib/kubelet/pki \
+                              --cloud-provider=aws
 
             runcmd:
               - systemctl daemon-reload
-              - systemctl enable keights-volumize.service
               - systemctl enable var-lib-etcd.mount
-              - systemctl enable keights-collector.timer
-              - systemctl enable keights-collector.service
-              - systemctl enable keights-share.path
-              - systemctl enable keights-templatize-etcd.path
-              - systemctl enable keights-templatize-kube-apiserver.path
-              - systemctl enable keights-templatize-kube-controller-manager.path
-              - systemctl enable keights-templatize-kube-scheduler.path
-              - systemctl enable keights-whisper-controller.service
-              - systemctl enable keights-bootstrap-token-splitter.path
-              - systemctl enable keights-prekubelet.service
-              - systemctl enable keights-bootstrap-token.service
-              - systemctl enable keights-bootstrap-kubeconfig.service
-              - systemctl enable keights-kubectl-create.service
               - systemctl enable kubelet.service
-              - systemctl enable kube-router.service
-              - systemctl enable kube-router-kubeconfig.service
-              - systemctl start --no-block keights-templatize-etcd.path
-              - systemctl start --no-block keights-templatize-kube-apiserver.path
-              - systemctl start --no-block keights-templatize-kube-controller-manager.path
-              - systemctl start --no-block keights-templatize-kube-scheduler.path
+              - systemctl enable keights-collector.timer
+              - systemctl enable keights-share.path
+              - systemctl enable keights-templatize-etcd.service
+              - systemctl enable keights-templatize-kubeadm-config.service
+              - systemctl enable keights-whisper-controller.service
               - systemctl start --no-block kubelet.service
-              - systemctl start --no-block kube-router.service
-              - systemctl start --no-block keights-kubectl-create.service
+              - systemctl start --no-block keights-collector.timer
+              - systemctl start --no-block keights-share.path
+              - systemctl start --no-block keights-kubeadm-init.service
 
 Outputs:
   LoadBalancerDnsName:
@@ -496,6 +445,9 @@ Outputs:
   EtcdSecurityGroup:
     Description: Security group for etcd
     Value: !Ref EtcdSecurityGroup
+  LoadBalancerSecurityGroup:
+    Description: Security group of load balancer
+    Value: !Ref LoadBalancerSecurityGroup
   AutoScalingGroup:
     Description: Name of autoscaling group
     Value: !Ref AutoScalingGroup
