--- a/fpm/usr/share/keights/kubeadm-config.yaml.template
+++ b/fpm/usr/share/keights/kubeadm-config.yaml.template
@@ -1,4 +1,5 @@
 apiVersion: kubeadm.k8s.io/v1alpha1
+kubernetesVersion: {{ .KubernetesVersion }}
 kind: MasterConfiguration
 nodeName: {{ .NodeName }}
 api:
