--- a/master.yml
+++ b/master.yml
@@ -92,6 +92,10 @@ Parameters:
     Description: Docker image containing etcd
     Type: String
     Default: gcr.io/google_containers/etcd-amd64:3.0.17
+  KubernetesVersion:
+    Description: Version of Kubernetes
+    Type: String
+    Default: 1.9.4
 
 Mappings:
   LambdaUrls:
@@ -396,6 +400,7 @@ Resources:
                   Environment=KEIGHTS_POD_SUBNET=${PodCidr}
                   Environment=KEIGHTS_SERVICE_SUBNET=${ServiceCidr}
                   Environment=KEIGHTS_HYPERKUBE_IMAGE=${HyperkubeImage}
+                  Environment=KEIGHTS_KUBERNETES_VERSION=v${KubernetesVersion}
 
               - path: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
                 owner: root:root
