--- a/fpm/usr/share/keights/kubeadm-config.yaml.template
+++ b/fpm/usr/share/keights/kubeadm-config.yaml.template
@@ -10,6 +10,7 @@ etcd:
   certFile: /etc/kubernetes/pki/etcd-client.crt
   keyFile: /etc/kubernetes/pki/etcd-client.key
 networking:
+  dnsDomain: {{ .Domain }}
   podSubnet: {{ .PodSubnet }}
   serviceSubnet: {{ .ServiceSubnet }}
 cloudProvider: aws
