--- a/fpm/etc/kubernetes/addons/kubernetes-dashboard.yaml
+++ b/fpm/etc/kubernetes/addons/kubernetes-dashboard.yaml
@@ -121,7 +121,7 @@ spec:
     spec:
       containers:
       - name: kubernetes-dashboard
-        image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.8.3
+        image: gcr.io/google_containers/kubernetes-dashboard-amd64:v1.8.3
         ports:
         - containerPort: 8443
           protocol: TCP
